--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "i18next": "^25.4.2",
     "i18next-express-middleware": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.18.0",
+    "mongoose": "^8.18.1",
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
     "node-cron": "^4.2.1",
@@ -49,6 +49,7 @@
     "puppeteer": "^24.18.0",
     "puppeteer-core": "^24.18.0",
     "qrcode": "^1.5.4",
+    "razorpay": "^2.9.6",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "stream-to-buffer": "^0.1.0",
