--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cookie-session": "^2.1.1",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "csv-parser": "^3.2.0",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.2",
     "ejs": "^3.1.10",
